# startplaying_scraper

./: pyproject.toml
startplaying/: items.json  scrapy.cfg  view_data.py
startplaying/startplaying/: items.py  middlewares.py  pipelines.py  settings.py
startplaying/startplaying/spiders/: startplaying_crawler.py  template.py
