[tool.poetry]
name = "startplaying-scraper"
version = "0.1.0"
description = ""
authors = ["Beezus Burger <zagranowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.1"
bokeh = "^3.4.1"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
